# Brain-Computer-Interface-v1

./: .gitignore  LICENSE  README.md  RUN.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
backend/bci/: __init__.py  cli.py  config.py  llm.py  registry.py  runtime.py
backend/bci/api/: __init__.py  app.py
backend/bci/connectome/: __init__.py  base.py  celegans.py  csv_source.py  drosophila.py  mesoscale.py  microns.py  schema.py  synthetic.py
backend/bci/electronics/: __init__.py  compose.py  llm.py  prompt.py  sanitize.py  service.py
backend/bci/environment/: __init__.py  base.py  stimulus.py
backend/bci/io/: __init__.py  addressing.py  contracts.py  dust.py  sono.py
backend/bci/molecular/: __init__.py  assay.py  channel.py  samples.py  service.py
backend/bci/simulation/: __init__.py  engine.py  neuron.py  stepper.py
backend/bci/waves/: __init__.py  inventor.py
backend/tests/: test_api.py  test_backend.py  test_celegans.py  test_connectome.py  test_electronics.py  test_mesoscale.py  test_molecular.py  test_rung2.py  test_waves.py
data/connectomes/celegans/: neurons.csv  synapses.csv
docs/: PROJECT_PLAN.md  index.html
docs/app/: app.css  index.html
docs/app/data/: celegans.json  mesoscale.json  microns.json  molecular_samples.json
docs/app/js/: activity2d.js  electronics.js  fly2d.js  fusion.js  hardware.js  molecular.js  panels.js  physics.js  sim.js  (+5 more)
profiles/: mouse.yaml  synthetic_small.yaml  worm.yaml
scripts/: export_web.py  fetch_celegans.py  fetch_drosophila.py  fetch_microns.py  fetch_mouse_mesoscale.py  make_figures.py
(+1 files in other folders)
