[project]
name = "bci"
version = "0.1.0"
description = "Brain-Computer-Interface — scalable connectome simulation & live visualization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "httpx", "fastapi>=0.110"]
figures = ["matplotlib>=3.8"]

[project.scripts]
bci = "bci.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/bci"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
